--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^11.6.4",
+    "cors": "^2.8.5",
+    "discord.js": "11.6.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1"
   }
